store/src/styles/components/kiosk.scss
/* ... */
.hern-kiosk__menu-carousal-arrow {
   position: absolute;
   stroke: currentColor;
   bottom: calc(50% - 21px);
   z-index: 100;
   border-radius: 50%;
}
.hern-kiosk__menu-carousal-left-arrow {
   left: 0;
}
.hern-kiosk__menu-carousal-right-arrow {
   right: 0;
}
//Override default carousel dots
.hern-kiosk__promotion__carousel {
   .slick-dots {
      bottom: 16px !important;
      li {
         background-color: rgba(255, 255, 255, 0.25);
         backdrop-filter: blur(20px);
         height: 12px;
         width: 12px;
         border-radius: 50%;
      }
      > li.slick-active {
         height: 12px;
         width: 12px;
         border-radius: 50%;
         > button {
            background-color: rgba(255, 255, 255, 0.8);
         }
      }
      li > button {
         height: 12px;
         width: 12px;
         border-radius: 50%;
      }
   }
}
.hern-kiosk__promotion-image {
   display: flex !important;
   justify-content: center !important;
}
.ant-steps-item-active {
   .ant-steps-item-icon {
   }
   .ant-steps-item-title {
      font-size: 21px;
      font-weight: 600;
   }
}
.ant-steps-finish-icon {
   > svg {
      margin-bottom: 6px;
   }
}
.ant-steps-item-container {
   display: flex;
   align-items: center;
}
.hern-kiosk__step-bar-rtl {
   .ant-steps-item-title {
      margin: 0 12px 0 12px;
      &::after {
         right: 100%;
      }
      &:last-child {
         margin: 0 12px 0 0;
      }
   }
}
//Bold progress for step bar
.hern-kiosk__step-bar-wrapper {
   .ant-steps-item-title::after {
      top: 10px !important;
      height: 12px !important;
      background-color: rgba(113, 36, 180, 0.4) !important;
      border-radius: 20px;
   }
}
.hern-kiosk__step-bar-count {
   width: 45px;
   height: 45px;
   border-radius: 22px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: 600;
}
.hern-kiosk__menu-category-side-bar {
   overflow-y: auto;
   padding-top: 1em;
   &::-webkit-scrollbar {
      width: 6px;
   }
   &::-webkit-scrollbar-thumb {
      background: #e5f0f7;
      border-radius: 4px;
   }
   .ant-menu-item-selected {
      background-color: transparent !important;
      .hern-kiosk__menu-page-product-category {
         // border: 4px solid #0f6bb1;
         // box-sizing: border-box;
         border-radius: 4px;
      }
      .hern-kiosk__menu-page-product-category-title {
         // color: #0f6bb1;
      }
   }
}
.hern-kiosk__menu-category-side-bar__wrapper {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}
.hern-kiosk__menu-category-arrow {
   display: flex;
   justify-content: center;
   width: 100%;
   background-color: #ffffff;

   &:first-child {
      padding-top: 12px;
      padding-bottom: 8px;
   }
   &:last-child {
      padding-bottom: 12px;
      padding-top: 8px;
   }
   > span {
      display: flex;
      align-items: center;
      justify-content: center;
      height: 1.75rem;
      width: 1.75rem;
      border-radius: 50%;
      background: rgba(113, 36, 180, 0.1);
      backdrop-filter: blur(4px);
   }
}
.hern-kiosk__menu-header-veg-switch {
   display: flex;
   justify-content: space-between;
   padding-top: 12px;
   .ant-switch {
      margin-top: 5px;
   }
   .ant-switch-checked {
      background-color: var(--hern-primary-color) !important;
   }
}
.hern-kiosk__menu-header-veg-text {
   font-weight: 700;
   font-size: 28px;
   line-height: 38px;
   text-transform: capitalize;

   color: #303030;
}
.hern-kiosk__menu-header-col-2 {
   position: relative;
   margin: 1em 0;
   display: flex;
   justify-content: center;
}

.hern-kiosk__menu-page-product-category {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   padding: 1em 0;
}
.hern-kiosk__menu-category-name {
   font-size: 1.5em;
   margin: 0 0 1em 0;
   font-weight: 500;
}
.hern-kiosk__scroll-element:nth-last-child(1) {
   min-height: 100%;
}
.hern-kiosk__category-scroll-link {
   display: flex;
   flex-direction: column;
   align-items: center;
}
.hern-kiosk__menu-page-product-category-title {
   font-size: 1.5em;
   font-weight: bold;
   color: #5a5a5a;
   line-height: 1.7em;
}
.hern-kiosk__menu-page-product-category-image {
   width: 12em;
   height: 12em;
}
.hern-kiosk__menu-category-banner-img {
   min-height: 120px;
   width: 100%;
   max-height: 200px;
   margin: 1em 0;
}
.hern-kiosk__menu-product-type {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 1em 0;
}
.hern-kiosk__menu-product-type-list {
   display: flex;
   overflow: auto;
   display: -webkit-flex;
   display: -moz-box;
}
.hern-kiosk__menu-product-type-radio-btn {
   font-size: 23px;
   padding: 0.5em 0.8em;
   text-align: center;
   height: auto;
   margin: 0 0.5em;
   white-space: nowrap;
   &::-webkit-scrollbar {
      width: 1px;
   }
   &::-webkit-scrollbar-thumb {
      background: #e5f0f7;
      border-radius: 2px;
   }
}
// menu part where products are being show
.hern-kiosk__menu-header {
   height: 9em;
   background: transparent;
}

.hern-kiosk__menu-header-row {
   height: 100%;
}
.hern-kiosk__menu-header-heading {
   text-align: center;
   font-size: 3.5em;
   font-weight: 700;
}
.hern-kiosk__menu-header-additional-options {
   display: flex;
   justify-content: center;
   align-items: center;
}
.hern-kiosk__cart-tool-tip {
   position: absolute;
   // bottom: -5px;
   transform: translateY(40px);
   animation-name: cart-tool-tip;
   animation-duration: 3s;
   animation-iteration-count: infinite;
}
@keyframes cart-tool-tip {
   // from {
   //    bottom: -5px;
   // }
   // to {
   //    bottom: -12px;
   // }
   0% {
      transform: translateY(40px);
   }
   50% {
      transform: translateY(47px);
   }
   100% {
      transform: translateY(40px);
   }
}
.hern-kiosk__cart-tool-tip-text {
   padding: 0.5em 1em;
   border-radius: 12px;
   font-weight: 600;
   font-size: 18px;
   line-height: 22px;
   white-space: nowrap;
}
/* ... */

